# miner

./: Cargo.toml  README.md  input.txt  output.txt
src/: main.rs
src/api/: requests.rs  structs.rs
