[package]
name = "mine"
version = "0.1.0"
authors = ["onkrot <rtym@yandex.ru>"]
edition = "2018"

[dependencies]
ring = "0.16.11"
crossbeam = "0.7.3"
reqwest = { version = "0.10.4", features = ["blocking"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
data-encoding = "2.2.0"
chrono = { version = "0.4.11", features = ["serde"] }
